# cv-jd-matching

./: .env  FLEXIBILITY_GUIDE.md  detailed_profiling_test.py  env.example  main.py  performance_test.py  pyproject.toml  readme.md  sample_request.json  simple_profiling_test.py  start_server.py  test_imports.py
examples/: cli_test.py  flexibility_test.py  minimal_test.json  partial_cv_test.json  sample_cv_data.py  test_api.py  ultra_minimal_test.json
src/cv_matching/: __init__.py  api.py  config.py  main.py  matcher.py  models.py  openai_service.py  profiler.py
